--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: eiche_tech
-      POSTGRES_PASSWORD: teste123
-      POSTGRES_DB: eiche_tech_development
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -33,7 +33,7 @@ services:
     image: getmeili/meilisearch:v1.7
     environment:
       MEILI_ENV: development
-      MEILI_MASTER_KEY: masterKey
+      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
     ports:
       - "7700:7700"
     volumes:
@@ -50,15 +50,15 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_HOST: postgres
-      DATABASE_USERNAME: eiche_tech
-      DATABASE_PASSWORD: teste123
-      DATABASE_URL: postgresql://eiche_tech:teste123@postgres:5432/eiche_tech_development
-      REDIS_URL: redis://redis:6379/0
-      MEILISEARCH_URL: http://meilisearch:7700
-      MEILISEARCH_KEY: masterKey
-      RAILS_ENV: development
-      RAILS_MAX_THREADS: 5
+      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_URL: ${DATABASE_URL}
+      REDIS_URL: ${REDIS_URL}
+      MEILISEARCH_URL: ${MEILISEARCH_URL}
+      MEILISEARCH_KEY: ${MEILISEARCH_KEY}
+      RAILS_ENV: ${RAILS_ENV}
+      RAILS_MAX_THREADS: ${RAILS_MAX_THREADS}
     depends_on:
       postgres:
         condition: service_healthy
@@ -70,7 +70,7 @@ services:
     tty: true
 
 volumes:
-  postgres_data: 
+  postgres_data:
   redis_data:
   meilisearch_data:
   bundle_cache:
